--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Base</title>
-    <link rel="preload" as="icon" href="assets/logo/active/favicon.ico">
+    <link rel="icon" type="image/icon" href="assets/logo/active/favicon.ico">
     <meta charset="UTF-8">
     <meta name="description" content="Learn how to optimize your website for a perfect Lighthouse score with tips on performance, accessibility, best practices, SEO, and PWA features.">
     <meta name="keywords" content="Lighthouse score optimization, web performance, SEO tips, accessibility, best practices, PWA features">
